# benchwise

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  GEMINI.md  README.md  USAGE_GUIDE.md  demo.py  mypy.ini  mypy_baseline.txt  pyproject.toml  pytest.ini.backup  requirements-core.txt  run_tests.py  setup.py  test_single_doc_file.py
.github/workflows/: ci.yml  deploy-docs.yml  publish-to-pypi.yml
benchwise/: __init__.py  cli.py  client.py  config.py  core.py  datasets.py  exceptions.py  logging.py  metrics.py  models.py  results.py  types.py
docs/: README.md  data.json  docusaurus.config.ts  package.json  sidebars.ts  test_load_dataset.py
docs/docs/: changelog.md  cli.md  contributing.md  examples.md  faq.md  getting-started.md  index.md  intro.md  usage-guide.md
docs/docs/additional/: CHANGELOG.md  cli.md  contributing.md  faq.md  migration-guide.md
docs/docs/advanced/: api-integration.md  configuration.md  custom-metrics.md  error-handling.md  logging.md  offline-mode.md
docs/docs/api/: client.md  config.md  exceptions.md  overview.md
docs/docs/api/datasets/: create-dataset.md  dataset.md  load-dataset.md
docs/docs/api/decorators/: benchmark.md  evaluate.md  stress-test.md
docs/docs/api/metrics/: accuracy.md  bert-score.md  bleu.md  coherence.md  factual-correctness.md  overview.md  perplexity.md  rouge.md  safety.md  semantic-similarity.md
docs/docs/api/models/: anthropic.md  google.md  huggingface.md  model-adapter.md  openai.md
docs/docs/api/results/: benchmark-result.md  evaluation-result.md  results-analyzer.md
docs/docs/examples/: classification.md  datasets.md  evaluation.md  metrics.md  multi-model-comparison.md  question-answering.md  results.md  safety-evaluation.md  summarization.md
docs/docs/getting-started/: core-concepts.md  installation.md  quickstart.md
docs/docs/guides/: datasets.md  evaluation.md  metrics.md  models.md  results.md
docs/src/pages/: index.tsx
sdk/: requirements-core.txt  setup.py
sdk/benchwise/: __init__.py  cli.py  core.py  datasets.py  metrics.py  models.py  results.py
tests/: conftest.py  test_config.py  test_docs_examples.py  test_integration.py  test_memory_large_datasets.py  test_models.py  test_rate_limits.py  test_results.py
website/: docusaurus.config.ts  sidebars.ts
website/.docusaurus/: registry.js  routes.js  routesChunkNames.json
website/.docusaurus/docusaurus-plugin-debug/default/p/: benchwise-docusaurus-debug-content-817.json
website/docs/: intro.md  usage-guide.md
