[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "benchwise"
version = "0.1.0a3"
description = "The GitHub of LLM Evaluation - Python SDK"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Bhuvnesh Sharma", email = "bhuvnesh875@gmail.com"},
]
keywords = ["llm", "evaluation", "benchmarking", "ai", "ml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
metrics = [
    "rouge-score>=0.1.2",
    "sacrebleu>=2.3.0",
    "bert-score>=0.3.13",
    "nltk>=3.8.0",
    "fuzzywuzzy>=0.18.0",
    "spacy>=3.8.7",
]

llm-apis = [
    "openai>=1.93.1",
    "anthropic>=0.57.1",
    "google-generativeai>=0.8.5",
]

transformers = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "sentence-transformers>=2.2.0",
]

llms = [
    "benchwise[llm-apis,transformers]"
]

test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
]

lint = [
    "ruff>=0.1.6",
    "pre-commit>=3.0.0",
    "mypy>=1.0.0",
]

dev = [
    "benchwise[test,lint]",
    "psutil>=5.9.0"
]

[project.urls]
Homepage = "https://github.com/Benchwise/benchwise"
Repository = "https://github.com/Benchwise/benchwise"
Issues = "https://github.com/Benchwise/benchwise/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["benchwise*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[project.scripts]
benchwise = "benchwise.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--color=yes",
    "--asyncio-mode=auto"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests that may take a while",
    "api: Tests that require API access",
    "mock: Tests using mock models",
    "memory: Memory usage tests",
    "rate_limit: Rate limiting tests",
]
asyncio_mode = "auto"
